k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awhere
  namespace: awhere
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: web
  selector:
    app: awhere
  type: ClusterIP
