k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: awhere
  namespace: awhere
spec:
  rules:
    - host: awhere.frodehus.dev
      http:
        paths:
          - backend:
              serviceName: awhere
              servicePort: 80
            path: /
  tls:
    - hosts:
        - awhere.frodehus.dev
      secretName: awhere.frodehus.dev
